--- a/AIHumanizer/Views/AIContents/Create.cshtml
+++ b/AIHumanizer/Views/AIContents/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AIHumanizer.Models.AIContent;
 @using Microsoft.AspNetCore.Identity;
-@inject UserManager<IdentityUser> userManager;
+@inject UserManager<ApplicationUser> userManager;
 
 @{
     ViewData["Title"] = "AI Content Editor";
